Pin to last issue on Library override object #126677

Closed
opened 2024-08-23 10:19:15 +02:00 by Y.T-LAW · 3 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 560.70

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-22 21:37, hash: d5e591b3dc8c
Broken: 4.2
Worked: -

Short description of error
override data modifier order is broken after pin to last

Exact steps for others to reproduce the error
image
For the "Array" and "Weld" modifiers in the file, generally the order cannot be changed when you drag them.
But after pin to last, "Array" move to the end.
image


**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 560.70 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-22 21:37, hash: `d5e591b3dc8c` Broken: 4.2 Worked: - **Short description of error** override data modifier order is broken after pin to last **Exact steps for others to reproduce the error** <img width="222" alt="image" src="attachments/09084a6d-11e6-4ad6-8538-2584ee0ab806"> For the "Array" and "Weld" modifiers in the file, generally the order cannot be changed when you drag them. But after pin to last, "Array" move to the end. <img width="205" alt="image" src="attachments/478b73e0-a654-4b74-8b31-a96eb4e36326"> ---
Y.T-LAW added the
Severity
Normal
Type
Bug
Status
Needs Triage
labels 2024-08-23 10:19:16 +02:00
Author
No description provided.
Iliya Katushenock added the
Interest
Modeling
Interest
Modifiers
Interest
Overrides
labels 2024-08-26 22:04:10 +02:00
Member

Hi, thanks for the report. Can confirm.

Hi, thanks for the report. Can confirm.
Pratik Borhade added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
Interest
Modeling
labels 2024-08-27 07:03:28 +02:00
Pratik Borhade self-assigned this 2024-08-27 07:21:32 +02:00
Member

!126813 should fix this

!126813 should fix this
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-27 13:42:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#126677
No description provided.