Fix #126677: Pin to last is possible on override object modifier

It is possible to change th order of library override modifier with pin
to last option. This breaks the modifier order and also introduces a
copy of modifier after reopening the linked file. To fix this issue,
do not set `PROPOVERRIDE_OVERRIDABLE_LIBRARY` on `use_pin_to_last`
property.

Pull Request: https://projects.blender.org/blender/blender/pulls/126813